	  situations (ADAMK, #29448)
	- Add a file check to the all_from param (ADAMK, #24586)
	- Fixed bug in can_run when PATH starts with a sep (ADAMK, #29866)
	- Don't overwrite dist args if there is a preop (ADAMK, #36831)
	- Bug fix in the command dispatcher (ADAMK, #27327)
        - perl_version now understands three-part Perl versions like
          5.8.1 (PJF, RT #38317)

0.76 Thu 17 Jul 2008
	- ExtUtils::MakeMaker no longer complains when its version
	  contains an underscore. (PJF, RT #35800)
	- Documentation patches to Module::Install::Admin and
	  Module::Install::Base. (Adriano Ferreira, RT #27696)
	- Corrected broken internal link in Module/Install.pod. (PJF)
	- The 'examples' directory will no longer be included
	  twice in META.yml/no_index/directory. (PJF)
	- Move to the new 1.4 version of the META.yml specification (ADAMK)
	- Automatically provide resources:license for
	  license('perl') (ADAMK)
	- Implemented the bugtracker_from command (ADAMK)
	- Added bugtracker_from to the all_from command
	  (Although we don't warn if not provided) (ADAMK)
	- Shifting minimum perl version for Module::Install to 5.005
	  (Anything older should use ExtUtils::MakeMaker) (ADAMK)
	- perl_version errors if it gets a value less that 5.005 (ADAMK)
	- Created the new install_share implementation (ADAMK)
	- Added the ppport function for adding ppport.h (ADAMK)
	- Bumped File::Remove from test_requires to requires (ADAMK)
	- Added dependency on Devel::PPPort for ppport (ADAMK)

0.75 Mon  2 Jun 2008 - Adam Kennedy
	- Documenting the smaller post Module::Build core package
	  Module::Install::With and removed experimental warning (ADAMK)
	- Disabled the broken install_share error check (CLACO)
	- Disabled "pointless version 0" warning, as it encourages less
	  metadata (ADAMK)
	- Adding an experimental undocumented implementation of a
	  "resources" and "repository" command (ADAMK)
	- Don't dump "tests" and "installdirs" to META.yml (ADAMK)

0.74 Mon 26 May 2008 - Adam Kennedy